--- a/packages/better-trino-client/package.json
+++ b/packages/better-trino-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-trino/client",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "description": "A modern, type-safe TypeScript client for Trino with comprehensive error handling and full protocol support",
   "keywords": [
@@ -25,6 +25,9 @@
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
+  "files": [
+    "dist"
+  ],
   "types": "./dist/index.d.mts",
   "exports": {
     ".": {
